logger, exception and utils are added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask-cors
+from-root
 flask
 
 numpy>=1.23.0                      # temporary patch for compat errors https://github.com/ultralytics/yolov5/actions/runs/9538130424/job/26286956354
